[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/patterns/wall/wobbly.png" type="Texture" id=1]
[ext_resource path="res://actors/environments/WaterWall.gd" type="Script" id=2]
[ext_resource path="res://assets/shaders/water.shader" type="Shader" id=3]
[ext_resource path="res://assets/patterns/round_waves.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/10x10_square.png" type="Texture" id=5]

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SuperOverlay:texture_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 8 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 100, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Outline:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4, 8 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ 40.0, 36.0, 40.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bottom:width")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4, 8 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ 44.0, 40.0, 44.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Outline:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 40.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bottom:width")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 40.0 ]
}

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/blue_tint = Color( 0, 0, 0, 1 )
shader_param/sprite_scale = Vector2( 0.5, 0.5 )
shader_param/scale_x = 0.67

[node name="WaterWall" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Graphics" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.941176 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics"]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="SuperOverlay" type="Polygon2D" parent="Graphics"]
unique_name_in_owner = true
z_index = 1
color = Color( 0, 0.259, 0.74, 0.101961 )
texture = ExtResource( 4 )
texture_scale = Vector2( 0.25, 0.5 )

[node name="Overlay" type="Polygon2D" parent="Graphics"]
unique_name_in_owner = true
z_index = 500
z_as_relative = false
color = Color( 0, 0.219608, 0.631373, 0.541176 )

[node name="Top" type="Polygon2D" parent="Graphics"]
unique_name_in_owner = true
material = SubResource( 1 )
color = Color( 0.29, 0.64, 1, 1 )
texture = ExtResource( 5 )

[node name="Outline" type="Line2D" parent="Graphics"]
unique_name_in_owner = true
z_index = -1
width = 40.0
default_color = Color( 0, 0.29, 1.3, 1 )
texture = ExtResource( 1 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Bottom" type="Line2D" parent="Graphics"]
unique_name_in_owner = true
position = Vector2( 0, 32 )
z_index = -2
width = 40.0
default_color = Color( 0, 0.223529, 0.560784, 1 )
texture = ExtResource( 1 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="OverlapArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="OverlapArea"]
visible = false

[node name="RepulsionArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4194304
priority = 128.0
space_override = 3
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = -6500.0
linear_damp = 20.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RepulsionArea"]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false

[connection signal="body_entered" from="OverlapArea" to="." method="_on_OverlapArea_body_entered"]
[connection signal="body_exited" from="OverlapArea" to="." method="_on_OverlapArea_body_exited"]
